data/all_generated_tests/raw_wast_tests/call_indirect_UnreachableCodeExecution_4098.wast
;; 7. **Test: Null Function Reference in Indirect Call**    - Description: Define a function table, inserting a `null` reference. Attempt calling this null reference function via `call_indirect`, leading to an `unreachable` instruction being executed due to the null reference.    - Constraint: Null references cause trap.    - Unreachable Execution: Missing function addressing heads to `unreachable`.

(assert_invalid
  (module
    (type (func (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) (ref.null func))
    (func (result i32)
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "null reference in table"
)